# EasyLabel

./: .gitignore  CMakeLists.txt  Main.qml  NewProjectPopup.qml  NewProjectPopup.qml.autosave  Projetc.qml  README.md  main.cpp
qml/: GlobalEnum.qml  Main.qml  NewProjectPopup.qml  ProjectPopup.qml  Projetc.qml  QmlGlobalHelper.qml
qml/canvas/: AnnotationDetailPanel.qml  AnnotationFileListDetail.qml  AnnotationLabelDetail.qml  AnnotationListDetail.qml  AnnotationStyleDetail.qml  CanvasEnums.qml  CentralAnnotationView.qml  DetectionLabelLayer.qml  KeyPointLabelLayer.qml  MainCanvas.qml  RotatedBoxLabelLayer.qml  SegmentationLabelLayer.qml
qml/component/: Collapse.qml  ColorButton.qml  ColorSlider.qml  Crosshair.qml  Cursor.qml  DirSelectInput.qml  LineWidthSlider.qml  OpacitySlider.qml  PopupStandardWindow.qml
qml/global/: GlobalEnum.qml  QmlGlobalHelper.qml
qml/project/: DetectionDetailComponent.qml  ExportDatasetPopup.qml  KeyPointDetailComponent.qml  OtherDetailComponent.qml  ProjectPopup.qml  ProjetcList.qml  RotatedBoxDetailComponent.qml  SegmentationDetailComponent.qml
src/: RemixIcon.cpp  RemixIcon.h  annotationconfig.cpp  annotationconfig.h  annotationenums.h  annotationmodelbase.cpp  annotationmodelbase.h  detectionAnnotationmodel.cpp  detectionAnnotationmodel.h  exportworker.cpp  exportworker.h  filelistmodel.cpp  filelistmodel.h  keyPointAnnotationmodel.cpp  keyPointAnnotationmodel.h  labellistmodel.cpp  labellistmodel.h  main.cpp  projectdto.cpp  projectdto.h  projectlistmodel.cpp  projectlistmodel.h  qmlutilscpp.cpp  qmlutilscpp.h  rotatedBoxAnnotationmodel.cpp  rotatedBoxAnnotationmodel.h  segmentationAnnotationmodel.cpp  segmentationAnnotationmodel.h
src/db/: dbHelper.cpp  dbHelper.h
src/db/schema/: schema.h
